--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         
         <div>
         <h1 class="main-title">A Simple To Do List</h1>
+        <h2>by Adelson Castillo</h2>
         </div>
 
         <div class="formItems">
